--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title>willamwowius.github.io</title>
+<title>willamowius.github.io</title>
 </head>
 <body>
-<h1>willamwowius.github.io</h1>
+<h1>willamowius.github.io</h1>
+
 <a href="https://www.gnugk.org/">GNU Gatekeeper</a>
 <p>
 <a href="https://www.willamowius.com/">H.323 and GNU Gatekeeper Support</a>
